dia da semana e table ajustada
table agora esta no formato de um dia so, no topo da tela mostra que dia é hoje

--- a/style.css
+++ b/style.css
@@ -166,7 +166,7 @@ table{
 	max-width: 90%;
 	overflow: auto;
 	white-space: nowrap;
-	border: solid 1px black;  
+	border: solid 1px transparent;  
 }
 
 .time{                    /* mantemos horarios da timetable fixos na horizontal */
