--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ body {
 .nav a:hover {
 	color: #fff;
 	transition: 0.4s; 
+	cursor: pointer;
 }
 
 /* Botao Darkmode   -   implementado pelo David 09/06/2020*/
@@ -40,9 +41,10 @@ body {
 .nav .close {            /* Botao para fechar sidebar */
 	position: absolute;
 	top: 40px;
-	right: 22px;
+	right: 0px;
 	padding: 10px;
-	margin-left: 50px;
+	margin-left: 20rem;
+	margin-right: 1rem;
 	font-size: 30px
 }
 .slide a {
@@ -130,7 +132,7 @@ header{
 	display: none;
 }
 .modal-content , .addTarefasIndividuais{
-	width: 600px;
+	width: 30rem;
 	height: 400px;
 	background-color: white;
 	border-radius: 4px;
@@ -182,16 +184,17 @@ header{
 	position: relative;
 }
 .addTarefasIndividuais select{
+	font-size: 0.9rem;
 	position: absolute;
 	top: 30px;
-	left: 32%;
+	left: 30%;
 	width: 208px;
 	height: 23px;
 } 
 .addTarefasIndividuais textarea{
 	position: absolute;
 	top: 60px;
-	left: 32%;
+	left: 30%;
 	width: 202px;
 	height: 50px;
 	resize: vertical;
@@ -201,17 +204,17 @@ header{
 .disciplina_span{
 	position: absolute;
 	top: 28px;
-	left: 14%;
+	right: 71%;
 } 
 .anotacoes_span{
 	position: absolute;
 	top: 60px;
-	left: 12.3%;
+	right: 71%;
 } 
 .addTarefasIndividuais button{
 	position: absolute;
 	bottom: 50px;
-	left: 43%;
+	right: 43%;
 }
 
 @media only screen and ( max-width: 620px ) {
@@ -239,22 +242,101 @@ header{
 		font-size: 1rem;
 		margin-top: 3px;
 	}
-}
-@media only screen and ( max-width: 410px ) {
-	.disciplina_span, .anotacoes_span{
-		font-size: 0.9rem;
+	.addTarefasIndividuais textarea{
+		top: 85px;
+		left: 30%;
 	}
+	.disciplina_span{
+		top: 10px;
+		left: 30%;
+	} 
+	.anotacoes_span{
+		top: 60px;
+		left: 30%;
+	} 
 }
-@media only screen and ( max-width: 383px ) {
-	.disciplina_span, .anotacoes_span{
-		margin-top: 5px;
-		font-size: 0.8rem;
-	}
-}
+
 
 
 /* ======================================================================= */
 /* ============ (FIM) formulario para add tarefas a timetable ============ */
+/* ======================================================================= */
+
+
+
+/* ======================================================================= */
+/* ======= (INICIO) formulario para manipular itens Local Storage ======== */
+/* ======================================================================= */
+/* .disciplinaMan_span   = cabecalho(texto) das janelas pop-up              */
+/* .disciplinaMan_select = Menu que mostra os itens dentro da banco de dados*/
+/* .disciplinaMan_text   = Caixa de texto - input                           */
+/* .addItemLStrg         = Botao de adicionar (Verde)                       */
+/* .remItemLStrg         = Botao de remover (Vermelho)                      */
+
+.manipulacaoItensLocalStorage .disciplinaMan_span{
+	position: absolute;
+	top: 5px;
+	left: 8rem;
+
+}
+.manipulacaoItensLocalStorage .disciplinaMan_select{
+	position: absolute;
+	top: 35px;
+	left: 8rem;
+
+}
+.manipulacaoItensLocalStorage .disciplinaMan_text{
+	font-size: 0.9rem;
+	position: absolute;
+	top: 35px;
+	left: 8rem;
+	width: 208px;
+	height: 23px;
+}
+
+.manipulacaoItensLocalStorage .addItemLStrg{
+	background-color: rgb(10, 150, 10);
+	color:white;
+	padding: 10px;
+	font-size: 1rem;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	border: none;
+	border-radius: 5px;
+	width: 6rem;
+	
+	position:absolute;
+	bottom: 4.5rem;
+	right: 53%;
+}
+.manipulacaoItensLocalStorage .remItemLStrg{
+	background-color: rgb(223, 18, 18);
+	color:white;
+	padding: 10px;
+	font-size: 1rem;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	border: none;
+	border-radius: 5px;
+	width: 6rem;
+
+	position:absolute;
+	bottom: 4.5rem;
+	left: 53%;
+}
+
+@media only screen and ( max-width: 420px ) {
+	.manipulacaoItensLocalStorage .disciplinaMan_span{
+		left: 5rem;
+	}
+	.manipulacaoItensLocalStorage .disciplinaMan_select{
+		left: 5rem;
+	}
+	.manipulacaoItensLocalStorage .disciplinaMan_text{
+		left: 5rem;
+	}
+}
+
+/* ======================================================================= */
+/* ========= (FIM) formulario para manipular itens Local Storage ========= */
 /* ======================================================================= */
 
 
