--- a/style.css
+++ b/style.css
@@ -208,6 +208,243 @@ header{
 
 
 /* ======================================================================= */
+/* ================== (INICIO) Visualizacao de materias ================== */
+/* ======================================================================= */
+
+.viewDisciplina{
+	background-color: white;
+	max-width: 100vw;
+	max-height: 80vh;
+	width: 30rem;
+	height: 600px;
+	text-align: center;
+	border-radius: 2px;
+	position: relative;
+}
+.viewDisciplina .btnClose{
+	padding: 10px;
+	font-size: 1.6rem;
+	cursor: pointer;
+	
+	position: absolute;
+	top: 15px;
+	right: 15px;
+}
+.viewDisciplina .box_nomeMateria{
+	margin: 70px 0px 20px;
+	font-size: 2rem;
+}
+
+
+.viewDisciplina .box_anotacoes{                       /* anotacoes da discplina */
+	background-color: #ccc;
+	height: 20vh;
+}
+.viewDisciplina .span_tagAnotacoes{
+	margin: 0px 0px 10px;
+	font-size: 1.4rem;
+	font-family: serif;
+	font-weight: 600;
+
+	position: absolute;
+	left: 2.5rem;
+}
+.viewDisciplina .content_anotacoes{
+	background-color: #a3a2a238;
+	margin: 48px auto 50px;
+	padding: 5px;
+	font-size: 1.1rem;
+	font-family: 'Times New Roman', Times, serif;
+	text-align: left;
+	overflow: auto;
+	border: solid black 1px;
+	border-radius: 2px;
+	box-shadow: 2px 1px rgba(128, 128, 128, 0.37);
+	
+	/* resize: vertical; */
+	max-height: 15vh;
+	min-height: 7vh;
+	width: 25rem;                  
+	height: 10vh;                   
+}
+
+
+.viewDisciplina .box_tarefas{                          /* Tarefas de cada disciplina */
+	/* background-color: #ccc; */
+	text-align: left;
+	margin: 0px auto 0px;
+	width: 26rem;
+	height: 25vh;
+	max-height: 150px;
+	border: solid 1px darkgray;
+	border-radius: 3px;
+	box-shadow: 2px 1px rgba(128, 128, 128, 0.26);
+	overflow: auto;
+	position: relative;
+}
+.viewDisciplina .span_tagTarefas{
+	color: black;
+	margin: 0px 2.6rem;
+	font-size: 1.4rem;
+	font-family: serif;
+	font-weight: 600;
+	text-align: left;
+}
+/*add iso no media query*/
+.viewDisciplina .item_tarefa{
+	margin: 10px auto;
+	padding: 0px;
+	position: relative;
+	width: 25rem;
+	height: 3rem;
+	border: solid 1px rgba(0, 0, 0, 0.829);
+	border-radius: 3px;
+	box-shadow: 3px 2px rgba(128, 128, 128, 0.301);
+}
+.viewDisciplina .nome_itemTarefa{
+	margin: 4px 0px;
+	padding: 10px;
+	/* border: solid darkgray 1px; */
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+
+	position: absolute;
+	left: 0;
+	width: 21rem;
+	height: 1rem;
+}
+.viewDisciplina .checkBox_itemTarefa input{
+	padding: 10px 10px;
+	transform: scale(1.5);
+	
+	position: absolute;
+	right: 1rem;
+	top: 1rem;
+}
+
+/* botoes canto inferior */
+.viewDisciplina .btnViewDisciplina{
+	background-color: white;
+	margin: 5% 0px 0px;
+	font-size: 3rem;
+	width: 100%;
+}
+.viewDisciplina .btnAddTarefa{
+	color: green;
+	transform: rotate(45deg);
+	padding: 15px 5px 5px;
+	margin: 0px 10%;
+	cursor: pointer;
+}
+.viewDisciplina .btnRemTarefa{
+	color: red;
+	padding: 15px 5px 5px;
+	margin: 0px 10%;
+	cursor: pointer;
+}
+
+
+/* Janela para adicao de uma nova tarefa */
+.box_input_addTarefa{
+	/* background-color: lightgray; */
+	margin: 10vh auto 30vh;
+	font-size: 1.4rem;
+	font-family: serif;
+	font-weight: 600;
+	width: 20.5rem;
+}
+.input_nameAddTarefa{
+	text-align: left;
+}
+#input_addTarefa{
+	font-size: 1.3rem;
+	width: 20rem;
+}
+
+
+
+/* Scrollbar  */
+::-webkit-scrollbar{
+	width: 7px;
+}
+::-webkit-scrollbar-track{
+	box-shadow: inset 0px 0px 2px gray;
+}
+::-webkit-resizer{
+	background-color: rgba(128, 128, 128, 0.301);
+}
+::-webkit-scrollbar-thumb{
+	background-color: rgba(128, 128, 128, 0.301);
+	border-radius: 4px;
+	padding: 0px 7px;
+}
+::-webkit-scrollbar-thumb:hover{
+	background-color: rgba(128, 128, 128, 0.575);
+}
+
+
+
+@media only screen and ( max-width: 495px ) {
+	.viewDisciplina{
+		width: 100vw;
+		height: 80vh;
+	}
+	.viewDisciplina .span_tagAnotacoes{
+		left: 7vw;
+	}
+	.viewDisciplina .content_anotacoes{
+		font-size: 1.2rem;
+		width: 86vw;
+		height: 12vh;
+	}
+	.viewDisciplina .box_tarefas{
+		width: 86vw;
+	}
+	.viewDisciplina .span_tagTarefas{
+		left: 7vw;
+		top: 41vh;
+	}
+	.viewDisciplina .item_tarefa{
+		width: 82vw;
+	}
+	.viewDisciplina .nome_itemTarefa{
+		width: 65vw;
+		/* padding: 10px 50vw 10px 0px;  */
+	}
+	
+	/* Janela para adicao de uma nova tarefa */
+	.box_input_addTarefa{
+		width: 75vw;
+	}
+	#input_addTarefa{
+		width: 75vw;
+	}
+}
+/* caso altura de tela for muito pequna */
+@media only screen and ( max-height: 620px ) {
+	.viewDisciplina .btnViewDisciplina{
+		margin: -5px 0px 0px;
+		font-size: 3rem;
+	}
+	.viewDisciplina .btnAddTarefa{
+		padding: 10px 5px 5px;
+		margin: 0px 10%;
+	}
+	.viewDisciplina .btnRemTarefa{
+		padding: 10px 5px 5px;
+		margin: 0px 10%;
+	}
+}
+
+
+/* ======================================================================= */
+/* =================== (FIM) Visualizacao de materias ==================== */
+/* ======================================================================= */
+
+
+
+/* ======================================================================= */
 /* ========== (INICIO) formulario para add tarefas a timetable =========== */
 /* ======================================================================= */
 /* .bg-modal              = tela em branco
