--- a/style.css
+++ b/style.css
@@ -265,7 +265,7 @@ header{
 	max-height: 15vh;
 	min-height: 7vh;
 	width: 25rem;                  
-	height: 10vh;                   
+	height: 15vh;                   
 }
 
 .editNotas{
@@ -291,22 +291,28 @@ header{
 }
 .btn_savealteracoes{
 	background-color: #13ce67b6;
-	margin: 15vh auto;
-	padding: 10px 15px;
-	font-size: 1rem;
-	font-weight: 600;
-	border: solid #13CE66 1px;
-	border-radius: 5px;
-	
-	/* position: absolute; */
-	bottom: 10vh;
+	color: white;
+	padding: 5px 15px;
+	margin: 19vh 0px 0px;
+	border-radius: 10px;
+	cursor: pointer;
 }
 .btn_savealteracoes:hover{
 	background-color: #13ce67e5;
-	border: solid #1ece6d 1px;
 	transition: 0.5s;
 }
-
+.viewDisciplina .btnRemTarefa{
+	background-color: rgba(255, 0, 0, 0.705);
+	color: white;
+	padding: 5px 20px;
+	margin: 19vh 0px 0px;
+	border-radius: 10px;
+	cursor: pointer;
+}
+.viewDisciplina .btnRemTarefa:hover{
+	background-color: red;
+	transition: 0.5s;
+}
 
 
 .viewDisciplina .box_tarefas{                          /* Tarefas de cada disciplina */
@@ -377,12 +383,7 @@ header{
 	margin: 0px 10%;
 	cursor: pointer;
 }
-.viewDisciplina .btnRemTarefa{
-	color: red;
-	padding: 15px 5px 5px;
-	margin: 0px 10%;
-	cursor: pointer;
-}
+
 
 
 /* Janela para adicao de uma nova tarefa */
@@ -436,7 +437,7 @@ header{
 	.viewDisciplina .content_anotacoes{
 		font-size: 1.2rem;
 		width: 86vw;
-		height: 12vh;
+		height: 15vh;
 	}
 	.viewDisciplina .box_tarefas{
 		width: 86vw;
@@ -471,14 +472,14 @@ header{
 		margin: -5px 0px 0px;
 		font-size: 3rem;
 	}
-	.viewDisciplina .btnAddTarefa{
+	/* .viewDisciplina .btnAddTarefa{
 		padding: 10px 5px 5px;
 		margin: 0px 10%;
 	}
 	.viewDisciplina .btnRemTarefa{
 		padding: 10px 5px 5px;
 		margin: 0px 10%;
-	}
+	} */
 }
 
 
@@ -654,9 +655,9 @@ header{
 	left: 8rem;
 
 }
-.manipulacaoItensLocalStorage .disciplinaMan_select{
+.manipulacaoItensLocalStorage .disciplinaManCor_span{
 	position: absolute;
-	top: 35px;
+	top: 65px;
 	left: 8rem;
 
 }
@@ -667,6 +668,20 @@ header{
 	left: 8rem;
 	width: 208px;
 	height: 23px;
+}
+.manipulacaoItensLocalStorage .disciplinaManCor_text{
+	font-size: 0.9rem;
+	position: absolute;
+	top: 93px;
+	left: 8rem;
+	width: 208px;
+	height: 23px;
+}
+.manipulacaoItensLocalStorage .disciplinaMan_select{
+	position: absolute;
+	top: 35px;
+	left: 8rem;
+
 }
 
 .manipulacaoItensLocalStorage .addItemLStrg{
@@ -700,13 +715,19 @@ header{
 
 @media only screen and ( max-width: 420px ) {
 	.manipulacaoItensLocalStorage .disciplinaMan_span{
-		left: 5rem;
-	}
-	.manipulacaoItensLocalStorage .disciplinaMan_select{
-		left: 5rem;
+		left: 20vw;
 	}
 	.manipulacaoItensLocalStorage .disciplinaMan_text{
-		left: 5rem;
+		left: 20vw;
+	}
+	.manipulacaoItensLocalStorage .disciplinaManCor_span{
+		left: 20vw;
+	}
+	.manipulacaoItensLocalStorage .disciplinaManCor_text{
+		left: 20vw;
+	}
+	.manipulacaoItensLocalStorage .disciplinaMan_select{
+		left: 20vw;
 	}
 }
 
@@ -862,6 +883,9 @@ th, td{
 	padding: 10px 10px;
 	position: relative;
 }
+.item_disciplina box_dataItem{
+	position: relative;
+}
 .item_disciplina span{
 	padding: 10px;
 	font-size: 1.5rem;
@@ -876,6 +900,34 @@ th, td{
 	color: rgba(0, 0, 0, 0.514);
 	font-size: 1rem;
 }
+
+.item_disciplina .tag_anotacao{
+
+}
+.item_disciplina .btn_editColor{
+	background-color: #13CE66;
+	padding: 10px 15px;
+	color: rgba(255, 255, 255, 0.863);
+	border-radius: 10px;
+	font-size: 1rem;
+	text-align: center;
+	position: absolute;
+	right: 10px;
+}
+.item_disciplina .btn_editColor:hover{
+	background-color: #11b85c;
+	color: rgb(255, 255, 255);
+	transition: 0.3s;
+}
+
+.item_disciplina .collapse_nameMateria{
+	border-radius: 10px;
+	width: 10rem;
+}
+.item_disciplina .collapse_nameMateria:hover{
+	opacity: 0.7;
+	transition: 0.3s;
+}
 .item_disciplina button{
 	margin: 1vh 0px 0px auto;
 	padding: 5px 10px;
@@ -883,6 +935,30 @@ th, td{
 	
 	position: absolute;
 	right: 10px;
+}
+
+@media only screen and (max-width: 420px) {
+    .box_disciplinas{
+		padding: 0;
+	}
+	.item_disciplina .collapse_nameMateria{
+		width: 43vw;
+		white-space: nowrap;
+		overflow: hidden;
+		text-overflow: ellipsis;
+	}
+	.item_disciplina button{
+		padding: 3px 5px;
+		right: 3px;
+	}
+	.item_disciplina .btn_editColor{
+		font-size: 1rem;
+		right: 0px;
+	}
+	.item_disciplina .tag_anotacao{
+		font-size: 1.3rem;
+	}
+	.item_disciplina .anotacao{}
 }
 
 
