--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
 }
 .nav_bar a:hover {
 	color: #fff;
-	transition: 0.4s; 
+	transition: 0.4s;
 	cursor: pointer;
 }
 
@@ -74,17 +74,18 @@ h1 {
 	background-color: #1abc9c;
 }
 #stickybutton {
-	position: -webkit- sticky;
-	position: sticky;
+	position: fixed;
 	bottom: 10px;
-	left: 90vw;
-	width: 100px;
-	font-size: 5rem;
+	right: 10px;
+	width: 70px;
+	height: 70px;
+	margin: 0px;
+	padding: 0px;
+	font-size: 4rem;
 	text-align: center;
 	background-color: #1abc9c;
 	border-radius: 50%;
 	font-family:'Alegreya Sans';
-
 }
 header{
 	text-align: center;
@@ -100,7 +101,7 @@ header{
 	}
 	*/
 	nav_bar a{
-		
+
 		font-size: 100px;
 	}
 	.nav_bar .close {
@@ -110,7 +111,7 @@ header{
 	margin-left: 100%;
 	font-size: 30px
 	}
-	
+
 }
 
 
@@ -225,7 +226,7 @@ header{
 	padding: 10px;
 	font-size: 1.6rem;
 	cursor: pointer;
-	
+
 	position: absolute;
 	top: 15px;
 	right: 15px;
@@ -260,12 +261,12 @@ header{
 	border: solid black 1px;
 	border-radius: 2px;
 	box-shadow: 2px 1px rgba(128, 128, 128, 0.37);
-	
+
 	/* resize: vertical; */
 	max-height: 15vh;
 	min-height: 7vh;
-	width: 25rem;                  
-	height: 15vh;                   
+	width: 25rem;
+	height: 15vh;
 }
 
 .editNotas{
@@ -282,12 +283,12 @@ header{
 	border: solid black 1px;
 	border-radius: 2px;
 	box-shadow: 2px 1px rgba(128, 128, 128, 0.37);
-	
-	resize: vertical; 
+
+	resize: vertical;
 	max-height: 15vh;
 	min-height: 7vh;
-	width: 25rem;                  
-	height: 10vh; 
+	width: 25rem;
+	height: 10vh;
 }
 .btn_savealteracoes{
 	background-color: #13ce67b6;
@@ -363,7 +364,7 @@ header{
 .viewDisciplina .checkBox_itemTarefa input{
 	padding: 10px 10px;
 	transform: scale(1.5);
-	
+
 	position: absolute;
 	right: 1rem;
 	top: 1rem;
@@ -453,7 +454,7 @@ header{
 		width: 65vw;
 		/* padding: 10px 50vw 10px 0px;  */
 	}
-	
+
 	#editNotas{
 		width: 86vw;
 	}
@@ -566,7 +567,7 @@ header{
 	left: 30%;
 	width: 208px;
 	height: 23px;
-} 
+}
 .addTarefasIndividuais textarea{
 	position: absolute;
 	top: 60px;
@@ -581,12 +582,12 @@ header{
 	position: absolute;
 	top: 28px;
 	right: 71%;
-} 
+}
 .anotacoes_span{
 	position: absolute;
 	top: 60px;
 	right: 71%;
-} 
+}
 .addTarefasIndividuais button{
 	position: absolute;
 	bottom: 50px;
@@ -625,11 +626,11 @@ header{
 	.disciplina_span{
 		top: 10px;
 		left: 30%;
-	} 
+	}
 	.anotacoes_span{
 		top: 60px;
 		left: 30%;
-	} 
+	}
 }
 
 
@@ -693,7 +694,7 @@ header{
 	border: none;
 	border-radius: 5px;
 	width: 6rem;
-	
+
 	position:absolute;
 	bottom: 4.5rem;
 	right: 53%;
@@ -742,19 +743,19 @@ header{
 /* ======================================================================= */
 
 table{
-	width: 90%;   
+	width: 90%;
 	box-shadow: 4px 5px rgba(46, 46, 46, 0.61);
 	border-radius: 1%;
-	
+
 }
 .table{
 	width: 90%;
 	margin-left: 5%;
-	margin-right: 5%;   
+	margin-right: 5%;
 	max-width: 90%;
 	overflow: auto;
 	white-space: nowrap;
-	border: solid 1px transparent;  
+	border: solid 1px transparent;
 }
 
 .time{                    /* mantemos horarios da timetable fixos na horizontal */
@@ -797,7 +798,7 @@ table, th, td{
 	text-align: center;
 	height: 100px;
 	width: 100px;
-	
+
 }
 
 /*
@@ -826,7 +827,7 @@ th, td{
 	}
 	*/
 	nav_bar a{
-		
+
 		font-size: 100px;
 	}
 	.nav_bar .close {
@@ -836,7 +837,7 @@ th, td{
 	margin-left: 100%;
 	font-size: 30px
 	}
-} 
+}
 
 
 /* ======================================================================= */
@@ -851,7 +852,7 @@ th, td{
 
 .box_config{
 	background-color: #1abc9c2c;
-	margin: 25px auto ; 
+	margin: 25px auto ;
 	padding: 10px;
 	width: 90vw;
 }
@@ -932,7 +933,7 @@ th, td{
 	margin: 1vh 0px 0px auto;
 	padding: 5px 10px;
 	font-size: 1rem;
-	
+
 	position: absolute;
 	right: 10px;
 }
